# VectorDBMS

./: .clang-format  .dockerignore  .gitignore  .mcp-config.json  BUILD_GUIDE.md  CMakeLists.txt  CMakePresets.json  CODEBASE_AUDIT.md  CODE_OF_CONDUCT.md  CPP_CONCEPTS.md  DEMO.ps1  DOCKER_GUIDE.md  DOCKER_QUICKSTART.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.windows  ENHANCED_WEB_UI.md  GITHUB_SETUP.md  LICENSE  LIVE_DEMO.md  MILESTONE_COMPLETION.md  MILESTONE_WEB_INTERFACE.md  PERFORMANCE.md  PRESENTATION.md  PRODUCTION_DEPLOYMENT.md  PROJECT_COMPLETION.md  PROJECT_METRICS.md  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  QUICK_REFERENCE.md  QUICK_START_v1.5.md  README.md  README_FORMATTING.md  SYSTEM_IMPROVEMENTS_v1.5.md  UPDATE_SUMMARY.md  USER_GUIDE.md  WEB_UI_TESTING_GUIDE.md  WHAT_WE_BUILT.md  YEAR1_Q2_PLAN.md  build_log.txt  (+12 more)
.agent/rules/: 1.md
.agent/workflows/: 1.md
.github/: copilot-instructions.md  mcp_config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: 1.agent.md
.github/hooks/: pre-commit
.github/prompts/: VectorDB.prompt.md
.github/workflows/: ci.yml  coverage.yml  dependency-review.yml
_codeql_build_dir/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Makefile  compile_commands.json  dbcli  dbweb
_codeql_build_dir/benchmarks/: Makefile  core_engine_benchmarks
_codeql_build_dir/tests/: Makefile  advanced_tests  core_engine_tests-b12d07c_include.cmake  integration_tests  security_tests
benchmarks/: CMakeLists.txt  bench_advanced.cpp  bench_lsm.cpp  bench_page_file.cpp  bench_storage_layer.cpp  bench_vector_ops.cpp
db_verify/: pages.db
docs/: BUILD_AND_RUN_COMMANDS.md  CLEANUP_SUMMARY.md  COMMAND_REFERENCE.md  CONTRIBUTING.md  DOCUMENTATION.md  MCP_SETUP.md  PROJECT_METRICS.md  README.md
monitoring/: prometheus.yml
monitoring/grafana-dashboards/: dashboard.yml  vectis-metrics.json
python-sdk/: README.md  pyproject.toml
python-sdk/vectis/: __init__.py  client.py  vector.py
scripts/: README.md  demo_frontend.ps1  demo_vectors.ps1  demo_vectors_simple.ps1  demo_web_frontend.ps1  generate_test_data.ps1
src/: .gitignore  API_REFERENCE.md  BADGES.md  BEFORE_AFTER_COMPARISON.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  EXECUTIVE_SUMMARY.md  FEATURES_ENHANCED_UI.md  FINAL_PROJECT_SUMMARY.md  MILESTONE_ENHANCED_UI.md  MILESTONE_V1.2_SUMMARY.md  MILESTONE_V1.3_SECURITY.md  MILESTONE_V1.4_ADVANCED.md  QUICKSTART_SECURITY.md  QUICK_REFERENCE.md  README.md  REPOSITORY_SUMMARY.md  SECURITY.md  SETUP_INSTRUCTIONS.md  V1.3_COMPLETE_SUMMARY.md  VISUAL_TOUR.md  demo_compaction.ps1  demo_web.ps1  demo_web_enhanced.ps1  demo_web_simple.ps1  push_to_github.ps1  push_to_github.sh  test_config.txt  test_security_config.txt
src/.github/: CONTRIBUTING.md  FUNDING.yml  FUNDING_TEMPLATE.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
src/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md  vector_performance.md
src/.github/workflows/: ci.yml  coverage.yml  sanitizers.yml
src/apps/dbcli/: main.cpp
src/apps/dbweb/: dashboard.html  main.cpp  main.cpp.backup  main_backup.cpp
src/apps/examples/: disk_demo.cpp  production_deployment.cpp
src/apps/tutorial/: tutorial_v1.4.cpp
src/cmake/: ProjectOptions.cmake
src/include/core_engine/: engine.hpp  metrics.hpp  rate_limiter.hpp
src/include/core_engine/catalog/: catalog.hpp
src/include/core_engine/common/: config.hpp  crc32.hpp  logger.hpp  status.hpp
src/include/core_engine/config/: app_config.hpp
src/include/core_engine/execution/: executor.hpp
src/include/core_engine/kv/: key_value.hpp
src/include/core_engine/lsm/: bloom_filter.hpp  level.hpp  lsm_tree.hpp  manifest.hpp  memtable.hpp  sstable.hpp  wal.hpp
src/include/core_engine/security/: audit.hpp  auth.hpp
src/include/core_engine/storage/: aligned_buffer.hpp  buffer_pool_manager.hpp  disk_manager.hpp  log_manager.hpp  page.hpp  page_file.hpp
src/include/core_engine/transaction/: txn.hpp
src/include/core_engine/vector/: hnsw_index.hpp  sift_parser.hpp  vector.hpp
src/lib/: engine.cpp
src/lib/catalog/: catalog.cpp
src/lib/common/: config.cpp  crc32.cpp  logger.cpp  status.cpp
src/lib/config/: app_config.cpp
src/lib/execution/: executor.cpp
src/lib/lsm/: bloom_filter.cpp  level.cpp  lsm_tree.cpp  manifest.cpp  memtable.cpp  sstable.cpp  wal.cpp
src/lib/performance/: metrics.cpp  rate_limiter.cpp
src/lib/security/: audit.cpp  auth.cpp
src/lib/storage/: buffer_pool_manager.cpp  disk_manager.cpp  log_manager.cpp  page.cpp  page_file.cpp
src/lib/transaction/: txn.cpp
src/lib/vector/: hnsw_index.cpp  sift_parser.cpp  vector.cpp
tests/: CMakeLists.txt  test_advanced_features.cpp  test_engine.cpp  test_fixed_buffers.cpp  test_integration_security.cpp  test_security.cpp  test_storage_layer.cpp  test_web_api.cpp
